[workspace]
members = [
    "material-styles-yew",
    "material-yewi",
    "documentation",
    "documentation-macros",
    "documentation-utils",
]
resolver = "2"

[patch.crates-io.yew-feather]
git = "https://github.com/WorldSEnder/yew-feather.git"
rev = "430ee54cf81b10aff11d3f38cf3bd0d214194faf"

[patch.crates-io.yew]
git = "https://github.com/futursolo/yew.git"
rev = "98821c4018b524e439bdf9b05e2f8372e37ef1bd"
[patch.crates-io.yew-router]
git = "https://github.com/futursolo/yew.git"
rev = "98821c4018b524e439bdf9b05e2f8372e37ef1bd"

[patch."https://github.com/yewstack/yew".yew]
git = "https://github.com/futursolo/yew.git"
rev = "98821c4018b524e439bdf9b05e2f8372e37ef1bd"
[patch."https://github.com/yewstack/yew".yew-router]
git = "https://github.com/futursolo/yew.git"
rev = "98821c4018b524e439bdf9b05e2f8372e37ef1bd"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# link time optimization using using whole-program analysis
lto = true
