[workspace]
members = [
    "material-styles-yew",
    "material-yewi",
    "documentation",
    "documentation-macros",
    "documentation-utils",
]
resolver = "2"

[patch.crates-io.yew]
git = "https://github.com/worldsender/yew.git"
rev = "e18db7380942a702d2004844bd650ef1d3162518"
[patch.crates-io.yew-router]
git = "https://github.com/worldsender/yew.git"
rev = "e18db7380942a702d2004844bd650ef1d3162518"
[patch.crates-io.yew-feather]
git = "https://github.com/pedrodesu/yew-feather.git"
rev = "8bc1660fc2ff3ccfb264b05f9c5537e998113d8e"
[patch.crates-io.stylist]
git = "https://github.com/worldsender/stylist.git"
rev = "7c5c9d0681ea9da5409fea00ffc52c9cab7914e5"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# link time optimization using using whole-program analysis
lto = true
