[package]
name = "material-yewi-documentation-utils"
version = "0.1.0"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "^0.18" }
css-in-rust = { version = "^0.6.0", path = "../css-in-rust", features = ["yew_integration"] }
material-styles-yew = { version = "^0.1.0", path = "../material-styles-yew" }
material-yewi = { version = "^0.1.0", path = "../material-yewi" }
