[package]
name = "material-yewi-documentation-utils"
version = "0.1.0"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "^0.18" }
material-styles-yew = { version = "^0.1.0", path = "../material-styles-yew" }
material-yewi = { version = "^0.1.0", path = "../material-yewi" }
once_cell = "1.8.0"

[dependencies.stylist]
version = "^0.10.0"
git = "https://github.com/futursolo/stylist-rs.git"
default-features = false
features = ["macros"]
