[package]
name = "material-yewi-documentation-utils"
version = "0.1.0"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "0.19" }
gloo-utils = "0.1"
material-styles-yew = { version = "^0.1.0", path = "../material-styles-yew" }
material-yewi = { version = "^0.1.0", path = "../material-yewi" }
once_cell = "1.8.0"
wasm-bindgen = "0.2.78"

[dependencies.stylist]
version = "^0.10.0"
default-features = false
features = ["macros"]

[dependencies.web-sys]
version = "0.3.55"
features = ["ShadowRoot", "ShadowRootInit", "ShadowRootMode"]
