[package]
name = "material-yewi-documentation"
version = "0.1.0"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
wee_alloc = "*"
yew = { version = "0.19", features = ["csr"] }
yew-router = "0.16"
yew-feather = "0.1.2"
material-styles-yew = { version = "^0.1.0", path = "../material-styles-yew" }
material-yewi = { version = "^0.1.0", path = "../material-yewi", features = [
    "default",
    "router",
] }
material-yewi-documentation-macros = { version = "^0.1.0", path = "../documentation-macros" }
material-yewi-documentation-utils = { version = "^0.1.0", path = "../documentation-utils" }
gloo = "0.4"

[dependencies.stylist]
version = "^0.10.0"
default-features = false
features = ["macros"]
