[package]
name = "material-styles-yew"
version = "0.1.0"
authors = ["WorldSEnder <worldsbegin@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "Generic styling solution for yew components"

[dev-dependencies]
yew = "^0.18.0"
log = "^0.4"
wasm-bindgen-test = "^0.3.9"
wasm-logger = "^0.2"
web-sys = "^0.3.53"

[dependencies]
yew = "^0.18"
dependent-map = { git = "https://github.com/WorldSEnder/dependent-map-rs.git" }
lazy_static = "^1.4.0"

[dependencies.stylist]
version = "^0.9.0"
git = "https://github.com/worldsender/stylist.git"
branch = "yew-next"
default-features = false
features = ["macros"]
