[package]
name = "material-yewi"
version = "0.1.0"
authors = ["WorldSEnder <worldsbegin@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A material design implementation in yew components"

[dev-dependencies]
yew = "^0.18.0"
log = "^0.4"
wasm-bindgen-test = "^0.3.9"
wasm-logger = "^0.2"
web-sys = "^0.3.36"

[dependencies]
yew = "^0.18"
yew-styles = { version = "^0.1.0", path = "../yew-styles" }
css-in-rust = { version = "^0.6.0", path = "../css-in-rust", features = ["yew_integration"] }
