[package]
name = "material-yewi"
version = "0.1.0"
authors = ["WorldSEnder <worldsbegin@gmx.de>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A material design implementation in yew components"

[dev-dependencies]
yew = "^0.18.0"
log = "^0.4"
wasm-bindgen-test = "^0.3.9"
wasm-logger = "^0.2"
web-sys = "^0.3.36"

[dependencies]
yew = "^0.18"
material-styles-yew = { version = "^0.1.0", path = "../material-styles-yew" }

yew-router = { version = "^0.15", optional = true }

[features]
default = []
router = ["yew-router"]

[dependencies.stylist]
version = "^0.9.0"
git = "https://github.com/worldsender/stylist.git"
branch = "yew-next"
default-features = false
features = ["macros", "yew_integration"]
