[package]
name = "truss-draw"
version = "0.1.0"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"


[dependencies]
yew = { version = "^0.18" }
yew-generator = { path = "../yew-generator" }
yew-styles = { path = "../yew-styles" }
css-in-rust = { path = "../css-in-rust", features = ["yew_integration"] }
material-yewi = { path = "../material-yewi" }
gloo = { version = "^0.3" }
