[package]
name = "yew-generator"
version = "0.1.0"
authors = ["WorldSEnder <worldsbegin@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "Using generator expressions in yew components"

[dev-dependencies]
yew = { path = "../../src/yew/packages/yew" }
log = "0.4"
wasm-bindgen-test = "0.3.9"
wasm-logger = "0.2"
web-sys = "0.3.36"

[dependencies]
yew = { path = "../../src/yew/packages/yew" }
wasm-bindgen = "0.2.60"
pin-cell = "0.1.1"
